productBDDService V2 backend fait et tester

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 <!> Maitre au normes RestFul toutes les routes des requetes à la fois au frontend et au backend
-    -> Gestion des produits backend fait mais à tester
+    -> Gestion des produits backend fait et tester
     -> Gestion des Users
 
 
